Обновлены отображения учебных планов, добавлена работа с пользователями в админке.

--- a/EducationSearching/Views/AdminPanel/Index_Predmet.cshtml
+++ b/EducationSearching/Views/AdminPanel/Index_Predmet.cshtml
@@ -34,6 +34,7 @@
 
         </p>
         <ul>
+            <li>@Html.ActionLink("Пользователи", "Index_Users", "AdminPanel")</li>
             <li>@Html.ActionLink("Предметы", "Index_Predmet", "AdminPanel")</li>
             <li>@Html.ActionLink("Добавить план", "AddPredmet", "Main")</li>
             <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
