--- a/EducationSearching/Views/Main/AddPredmet.cshtml
+++ b/EducationSearching/Views/Main/AddPredmet.cshtml
@@ -58,98 +58,98 @@
             <div class="col-md-10">
                 @Html.TextArea("potok", "", new { id = "potok", @class = "whatever-class", @cols = 80, @rows = 3,  autocomplete = "off" })
             </div>
-
+            <br />
             Количество групп:
             <div class="col-md-10">
-                @Html.TextArea("kolvoGrupp", "", new { id = "kolvoGrupp", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("kolvoGrupp", "", new {style = "Width:70px", id = "kolvoGrupp", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Количество подгрупп:
             <div class="col-md-10">
-                @Html.TextArea("kolvoPodGrupp", "", new { id = "kolvoPodGrupp", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("kolvoPodGrupp", "", new {style = "Width:70px", id = "kolvoPodGrupp", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Количество студент:
             <div class="col-md-10">
-                @Html.TextArea("kolvoStudent", "", new { id = "kolvoStudent", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("kolvoStudent", "", new {style = "Width:70px", id = "kolvoStudent", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Лекции:
             <div class="col-md-10">
-                @Html.TextArea("lekcii", "", new { id = "lekcii", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("lekcii", "", new {style = "Width:70px", id = "lekcii", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Практика план:
             <div class="col-md-10">
-                @Html.TextArea("praktikaPlan", "", new { id = "praktikaPlan", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("praktikaPlan", "", new {style = "Width:70px", id = "praktikaPlan", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Практика всего:
             <div class="col-md-10">
-                @Html.TextArea("praktikaVsego", "", new { id = "praktikaVsego", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("praktikaVsego", "", new {style = "Width:70px", id = "praktikaVsego", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Лабораторные план:
             <div class="col-md-10">
-                @Html.TextArea("labPlan", "", new { id = "labPlan", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("labPlan", "", new {style = "Width:70px", id = "labPlan", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Лабораторные всего:
             <div class="col-md-10">
-                @Html.TextArea("labVsego", "", new { id = "labVsego", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("labVsego", "", new {style = "Width:70px", id = "labVsego", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Консультации тек.:
             <div class="col-md-10">
-                @Html.TextArea("konsultTek", "", new { id = "konsultTek", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("konsultTek", "", new {style = "Width:70px", id = "konsultTek", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Консультации пр. экз:
             <div class="col-md-10">
-                @Html.TextArea("konsultEkz", "", new { id = "konsultEkz", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("konsultEkz", "", new {style = "Width:70px", id = "konsultEkz", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Экзамен:
             <div class="col-md-10">
-                @Html.TextArea("exzamen", "", new { id = "exzamen", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("exzamen", "", new {style = "Width:70px", id = "exzamen", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Зачет:
             <div class="col-md-10">
-                @Html.TextArea("zachet", "", new { id = "zachet", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("zachet", "", new {style = "Width:70px", id = "zachet", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Рук-во практ.:
             <div class="col-md-10">
-                @Html.TextArea("rykvoPract", "", new { id = "rykvoPract", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("rykvoPract", "", new {style = "Width:70px", id = "rykvoPract", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Рук-во ДЖП. ПР.:
             <div class="col-md-10">
-                @Html.TextArea("rykvoDJPpr", "", new { id = "rykvoDJPpr", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("rykvoDJPpr", "", new {style = "Width:70px", id = "rykvoDJPpr", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
 
             <br />
             Часы на ОргСРС:
             <div class="col-md-10">
-                @Html.TextArea("chasSRS", "", new { id = "chasSRS", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("chasSRS", "", new {style = "Width:70px", id = "chasSRS", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Часы за рейт.:
             <div class="col-md-10">
-                @Html.TextArea("chasReit", "", new { id = "chasReit", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("chasReit", "", new {style = "Width:70px", id = "chasReit", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
 
             <br />
             Рук-во аспир.:
             <div class="col-md-10">
-                @Html.TextArea("rykvoAspirant", "", new { id = "rykvoAspirant", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("rykvoAspirant", "", new {style = "Width:70px", id = "rykvoAspirant", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
 
             <br />
             Всего:
             <div class="col-md-10">
-                @Html.TextArea("vsego", "", new { id = "vsego", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
+                @Html.TextArea("vsego", "", new {style = "Width:70px", id = "vsego", @class = "whatever-class", @cols = 20, @rows = 1,  autocomplete = "off" })
             </div>
             <br />
             Ассистенты:
