--- a/EducationSearching/Views/AdminPanel/Create_Predmet.cshtml
+++ b/EducationSearching/Views/AdminPanel/Create_Predmet.cshtml
@@ -38,6 +38,7 @@
 
     </p>
     <ul>
+        <li>@Html.ActionLink("Пользователи", "Index_Users", "AdminPanel")</li>
         <li>@Html.ActionLink("Предметы", "Index_Predmet", "AdminPanel")</li>
         <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
     </ul>
