--- a/EducationSearching/Views/AdminPanel/Details_Predmet.cshtml
+++ b/EducationSearching/Views/AdminPanel/Details_Predmet.cshtml
@@ -31,6 +31,7 @@
 
             </p>
             <ul>
+                <li>@Html.ActionLink("Пользователи", "Index_Users", "AdminPanel")</li>
                 <li>@Html.ActionLink("Предметы", "Index_Predmet", "AdminPanel")</li>
                 <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
             </ul>
