--- a/EducationSearching/Views/Main/EditRecord.cshtml
+++ b/EducationSearching/Views/Main/EditRecord.cshtml
@@ -24,7 +24,7 @@
             списокСеместров.Add(new SelectListItem() { Text = "2 семестр" });//Заполняем его
             }
 
-            @for (int i = 2013; i < 2015; i++)
+            @for (int i = 2013; i <= 2015; i++)
             {
                 списокГодов.Add(new SelectListItem() { Text = i.ToString() });//Заполняем его
             }
