--- a/EducationSearching/Views/Main/AddPredmet.cshtml
+++ b/EducationSearching/Views/Main/AddPredmet.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             <select name="spisokYear">
             <option disabled selected>Выберите год:</option>
-                @for (int i = 2013; i < 2015; i++)
+                @for (int i = 2013; i <= 2015; i++)
                 {
                     <option value=@i>@i.ToString()</option>
                 }
